check_output_2.txt
warning: unused import: `std::sync::Arc`
 --> astraweave-fluids\src\renderer.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `shader`
  --> astraweave-fluids\src\sdf.rs:22:13
   |
22 | ...   let shader = device.cre...
   |           ^^^^^^ help: if this is intentional, prefix it with an underscore: `_shader`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `config_buffer`
  --> astraweave-fluids\src\sdf.rs:27:13
   |
27 | ... let config_buffer = devic...
   |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_config_buffer`

warning: unused variable: `jfa_params_buffer`
  --> astraweave-fluids\src\sdf.rs:33:13
   |
33 | ...et jfa_params_buffer = dev...
   |       ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_jfa_params_buffer`

warning: unused variable: `texture_a`
  --> astraweave-fluids\src\sdf.rs:55:13
   |
55 | ...   let texture_a = device....
   |           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_texture_a`

warning: unused variable: `texture_b`
  --> astraweave-fluids\src\sdf.rs:56:13
   |
56 | ...   let texture_b = device....
   |           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_texture_b`

warning: multiple fields are never read
  --> astraweave-fluids\src\sdf.rs:4:5
   |
3  | pub struct SdfSystem {
   |            --------- fields in this struct
4  |     init_pipeline: wgpu::Comp...
   |     ^^^^^^^^^^^^^
5  |     step_pipeline: wgpu::Comp...
   |     ^^^^^^^^^^^^^
6  |     finalize_pipeline: wgpu::...
   |     ^^^^^^^^^^^^^^^^^
7  |
8  |     config_buffer: wgpu::Buffer,
   |     ^^^^^^^^^^^^^
9  |     jfa_params_buffer: wgpu::...
   |     ^^^^^^^^^^^^^^^^^
...
14 |     bind_group_a: wgpu::BindG...
   |     ^^^^^^^^^^^^
15 |     bind_group_b: wgpu::BindG...
   |     ^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `astraweave-fluids` (lib) generated 7 warnings (run `cargo fix --lib -p astraweave-fluids` to apply 1 suggestion)
    Checking fluids_demo v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\fluids_demo)
error[E0425]: cannot find value `system` in this scope
  --> examples\fluids_demo\src\scenarios\ocean.rs:34:9
   |
31 |         _system: &mut FluidSystem,
   |         ------- `_system` defined here
...
34 |         system.smoothing_radius = 1.0;
   |         ^^^^^^
   |
help: the leading underscore in `_system` marks it as unused, consider renaming it to `system`
   |
31 -         _system: &mut FluidSystem,
31 +         system: &mut FluidSystem,
   |

error[E0425]: cannot find value `system` in this scope
  --> examples\fluids_demo\src\scenarios\ocean.rs:35:9
   |
31 |         _system: &mut FluidSystem,
   |         ------- `_system` defined here
...
35 |         system.gravity = -9.81;
   |         ^^^^^^
   |
help: the leading underscore in `_system` marks it as unused, consider renaming it to `system`
   |
31 -         _system: &mut FluidSystem,
31 +         system: &mut FluidSystem,
   |

warning: unused import: `Mat4`
 --> examples\fluids_demo\src\scenarios\laboratory.rs:5:12
  |
5 | use glam::{Mat4, Vec3};
  |            ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Mat4`
 --> examples\fluids_demo\src\scenarios\ocean.rs:6:12
  |
6 | use glam::{Mat4, Vec3};
  |            ^^^^

error[E0596]: cannot borrow `physics_world` as mutable, as it is not declared as mutable
   --> examples\fluids_demo\src\main.rs:190:63
    |
190 |             scenario.init(&device, &queue, &mut fluid_system, &mut physics_world);
    |                                                               ^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
161 |         let mut physics_world = PhysicsWorld::new(Vec3::new(0.0, -9.81, 0.0));
    |             +++

Some errors have detailed explanations: E0425, E0596.
For more information about an error, try `rustc --explain E0425`.
warning: `fluids_demo` (bin "fluids_demo") generated 2 warnings
error: could not compile `fluids_demo` (bin "fluids_demo") due to 3 previous errors; 2 warnings emitted
